--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@storybook/react": "^6.2.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "auto": "^10.37.6",
     "babel-plugin-inline-json-import": "^0.3.2",
     "babel-plugin-styled-components": "^1.10.7",
     "babel-plugin-transform-imports": "^2.0.0",
