--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@iotabots/components",
+  "name": "@ccdao/components",
   "version": "0.0.50",
   "private": false,
   "main": "dist/index.js",
